# Machine-Learning

./: .gitignore  README.md
.github/workflows/: cmake.yml
NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp
NeuralNetwork/Headers/: LSTM.h  SelfAttention.h  TextProcessing.h
